describe aqui o que você mudou

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <canvas id="wheelCanvas" width="500" height="500"></canvas>
     </div>
     
-    <button id="spinBtn">í¾¯ Girar</button>
+    <button id="spinBtn">Girar</button>
     <div id= "result" >Clique em Girar para tentar a sorte!</div>
   </div>
 
@@ -220,7 +220,7 @@
             resultDiv.textContent = "Passou a vez!";
             resultDiv.className = 'pass';
           } else if (segment.text === "iPhone") {
-            resultDiv.textContent = "Que pena! Quase ganhou o iPhone! í¸¬";
+            resultDiv.textContent = "Que pena! Quase ganhou o iPhone! ï¿½ï¿½ï¿½";
             resultDiv.className = 'pass';
           } else {
             resultDiv.textContent = "ParabÃ©ns! VocÃª ganhou: " + segment.text;
